# sd-sdk-python

./: README.md  conftest.py  pyproject.toml  tea.yaml
.github/workflows/: branch..yaml  release.yaml
sd_sdk_python/: __init__.py  sd_sdk.py
tests/: EC_Left.param  EC_Right.param  test_basic.py  test_parameters.py  test_programmer.py
